fixed banner spacing

--- a/styles.css
+++ b/styles.css
@@ -192,15 +192,7 @@ margin-bottom: 2%;
      
 }  
 
-/* .hand-crafted {
-    position: relative;
-} */
 
-/* .hand-crafted a.btn-craft{
-    padding: 5%;
-    padding: 5%;
-    margin-left: 50%;
-} */
 
 .jewels {
     background-color: #201E21;
@@ -241,23 +233,37 @@ margin-bottom: 2%;
     color: #FABA63;
     float: left;
     list-style: none;
-    margin-left: 15%;
-    padding-right: 7%;
+    margin-left: 17%;
+    /* padding-right: 7%; */
 }
 
-.gold-one a {
+/* .font-icon {
+    margin-left: 30%;
+} */
+
+.font-icon i {
+    font-size: 7rem;
+    padding-left: 25%;
+}
+
+/* .gold-one i.second */
+
+
+.font-icon a {
     text-decoration: none;
 }
 
-.font-icon p {
+.font-icon h3 {
     font-family: 'Italiana';
     font-weight: 400;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
-.font-icon p.third {
-    margin-left: -22px;
+.font-icon h3.second {
+    padding-left: 15px;
+
 }
+
 
 .sustain-material {
     margin-top: 0%;
@@ -390,7 +396,6 @@ form input[type="email"] {
     height: 35px;
     font-size: 2rem;
     padding-left: 10px;
-    /* float: left; */
 }
 
 
@@ -398,14 +403,11 @@ form input[type="email"] {
     color: #fff;
     text-decoration: none;
     font-size: 2rem;
-    
     padding: 5px 7px;
-
-text-decoration: none;
-font-family: 'Italiana';
-font-weight: 400;
-
-line-height: 3.8rem;
+    text-decoration: none;
+    font-family: 'Italiana';
+    font-weight: 400;
+    line-height: 3.8rem;
 }
 
 .rights p {
@@ -459,11 +461,6 @@ line-height: 3.8rem;
         left: 15%;
     }
 
-   
-
-     .gold-one {
-        margin-left: 13%;
-    }
 
     .sustain-info {
         margin-top: -18px;
@@ -480,10 +477,14 @@ line-height: 3.8rem;
     .hand-craft-text a.btn{
         margin-left: 10%;
     }
-    .gold-one {
-        margin-left: 13%;
-    }
+  
 } 
+
+@media (max-width: 1100px) {
+    .fav-icons {
+        padding-left: 0px;
+    }
+}
 
 @media (max-width: 1014px) {
     .hand-craft-text p {
@@ -513,4 +514,30 @@ line-height: 3.8rem;
     .mix-match-text h3 {
         margin-top: 0;
     }
+}
+
+
+@media (max-width: 950px) {
+    header ul.social {
+        left: 80%;
+    }
+
+    .craft-info img.img-hands {
+    float: none;
+    width: 50%;
+    margin: 0 auto;
+}
+    .hand-craft-text {
+        margin: 0 auto;
+    }
+
+    .hand-craft-text h3 {
+        margin-left: 30%;
+    }
+    .hand-craft-text a.btn {
+    margin-left: 45%;
+}
+
+
+
 }
